// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesPanel should render when there are answers 1`] = `
<PropertiesPanel__OuterDiv>
  <h2>
    Properties
  </h2>
  <PropertiesPanel__InnerDiv>
    <ScrollPane>
      <StatelessAccordion>
        <AccordionPanel
          id="Page1"
          open={false}
          title="Page"
        >
          <PageProperties
            onBlur={[Function]}
            onChange={[Function]}
            onSubmit={[Function]}
            orderMax={10}
            orderMin={1}
            page={
              Object {
                "__typename": "Page",
                "answers": Array [
                  Object {
                    "__typename": "Answer",
                    "id": "1",
                  },
                  Object {
                    "__typename": "Answer",
                    "id": "2",
                  },
                ],
                "id": "1",
                "type": "Questionnaire",
              }
            }
          />
        </AccordionPanel>
        <AccordionPanel
          id="Answer1"
          key="1"
          open={false}
          title="Answer 1"
        >
          <AnswerProperties
            answer={
              Object {
                "__typename": "Answer",
                "id": "1",
              }
            }
            onChange={[Function]}
            onSubmit={[Function]}
          />
        </AccordionPanel>
        <AccordionPanel
          id="Answer2"
          key="2"
          open={false}
          title="Answer 2"
        >
          <AnswerProperties
            answer={
              Object {
                "__typename": "Answer",
                "id": "2",
              }
            }
            onChange={[Function]}
            onSubmit={[Function]}
          />
        </AccordionPanel>
      </StatelessAccordion>
    </ScrollPane>
  </PropertiesPanel__InnerDiv>
</PropertiesPanel__OuterDiv>
`;

exports[`PropertiesPanel should render when there are no answers 1`] = `
<PropertiesPanel__OuterDiv>
  <h2>
    Properties
  </h2>
  <PropertiesPanel__InnerDiv>
    <ScrollPane>
      <StatelessAccordion>
        <AccordionPanel
          id="Page1"
          open={false}
          title="Page"
        >
          <PageProperties
            onBlur={[Function]}
            onChange={[Function]}
            onSubmit={[Function]}
            orderMax={10}
            orderMin={1}
            page={
              Object {
                "__typename": "Page",
                "answers": Array [],
                "id": "1",
                "type": "Questionnaire",
              }
            }
          />
        </AccordionPanel>
      </StatelessAccordion>
    </ScrollPane>
  </PropertiesPanel__InnerDiv>
</PropertiesPanel__OuterDiv>
`;
